# flashflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COUNTDOWN_TIMER_README.md  FLASHCORE_IMPLEMENTATION_SUMMARY.md  FLASHFLOW_ENGINE_UPGRADE_SUMMARY.md  FLET_MIGRATION_SUMMARY.md  FLET_NOTIFICATIONS_MIGRATION.md  IMPLEMENTATION_COMPLETE.bat  LICENSE  PUBLISHING_SUMMARY.md  README.md  RUN_FLASHCORE_DEMO.bat  SUMMARY.md  USER_TRACKING_NOTIFICATIONS.md  USING_FLASHCORE_WITH_FLASHFLOW.md  build-flashcore.bat  example.flow  flashflow.json  micro-interactions-demo.html  preview_demo.py  requirements.txt  setup.py  test-flashcore.py  test_micro_interactions.py  timers.db  verify_build_service.py  verify_implementation.py
core/: framework.py
demos/: countdown_demo.py  simple_theme_demo.py
docs/: AI_ML_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CODE_LOGIC.md  CONCEPTS.md  CONVERT_EXISTING_DOCS_TO_FLASHFLOW.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_PRODUCTIVITY_GUIDE.md  DOCUMENTATION_TO_FLASHFLOW_CONVERTER.md  EXTENSION_GUIDE.md  FLASHCORE_INTEGRATION.md  FLASHFLOW_QUICK_REFERENCE.md  PROJECT_STRUCTURE.md  (+15 more)
flashcore/: CMakeLists.txt  README.md  build.bat  build.sh
flashcore/bindings/go/: flashcore.go  flashcore_test.go
flashcore/bindings/python/: README.md  build.bat  build.sh  integration_test.py  pybind11_bindings.cpp  requirements.txt  setup.py  test_flashcore.py
flashcore/include/: flashcore_api.h
flashcore/src/: inference_engine.cpp  vault_security.cpp  vector_search.cpp
flashcore/tests/: CMakeLists.txt  test_inference_engine.cpp  test_vault_security.cpp  test_vector_search.cpp
flashcore/wasm/: build_wasm.sh  index.html
(+221 files in other folders)
