add_executable(test_vector_search test_vector_search.cpp)
target_link_libraries(test_vector_search flashcore_static)

add_executable(test_inference_engine test_inference_engine.cpp)
target_link_libraries(test_inference_engine flashcore_static)

add_executable(test_vault_security test_vault_security.cpp)
target_link_libraries(test_vault_security flashcore_static)

add_test(NAME VectorSearchTest COMMAND test_vector_search)
add_test(NAME InferenceEngineTest COMMAND test_inference_engine)
add_test(NAME VaultSecurityTest COMMAND test_vault_security)